Fixed spacing issue

--- a/app/assets/styles/modules/_hero.css
+++ b/app/assets/styles/modules/_hero.css
@@ -2,8 +2,8 @@
     position: relative;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    min-height: 80vh;
     padding-top: 0;
+    min-height: 100vh;
 
     &__col1{
         display: flex;
@@ -73,10 +73,7 @@
         bottom:0;
         display: flex;
         margin-bottom: -5px;
-    }
-
-    @media(max-width: 1024px){
-        min-height: 40vh;
+        width: 100%;
     }
 
     @media(max-width: 768px){
@@ -131,6 +128,7 @@
         
         &__col2__img{
             width: 90%;
+            margin-top: 5rem;
         }
 
         &__header{
