--- a/app/assets/styles/modules/_intro.css
+++ b/app/assets/styles/modules/_intro.css
@@ -1,17 +1,17 @@
 .intro{
     display: grid;
-    grid-template-columns: 1.5fr 1fr;
+    grid-template-columns: 1fr 1fr;
     background-color: #F9F8FE;
     text-align: left;
 
     &__title{
-        font-size: 2rem;
+        font-size: 2.2rem;
     }
 
     &__text1, &__text2{
         color: black;
         max-width: 65%;
-        font-size: 0.8rem;
+        font-size: 1rem;
         line-height: 1.5;
     }
 
@@ -20,6 +20,14 @@
         align-items: center;
         justify-content: flex-end;
         margin-left: 2rem;
+        justify-self: start;
+        width: 100%;
+        
+        &__img{
+            height: 350px;
+            width: 85%;
+            margin-right: 4rem;
+        }
     }
 
     &__link{
@@ -31,6 +39,7 @@
 
         &__img{
             vertical-align: middle;
+            
         }
     }
 
@@ -78,13 +87,29 @@
     }
     }
 
+    @media(min-width:770px) and (max-width: 910px){
+        &__col2{
+            justify-content:flex-start;
+        }
+    }
+
     @media(max-width: 768px){
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr;
 
+        &__quote{
+            margin-left: auto;
+            margin-right: auto;
+        }
+
         &__col2{
             order: -1;
             margin-bottom: 1.5rem;
+            margin-left: 0;
+
+            &__img{
+                margin-right: 0;
+            }
         }
 
         &__title{
@@ -106,7 +131,7 @@
     @media(max-width:550px){
 
         grid-template-columns: 1fr;
-        grid-template-rows: 280px 1fr;
+        grid-template-rows: 330px 1fr;
 
         &__quote{
             width: 270px;
@@ -117,6 +142,12 @@
 
         &__col2{
             order: -1;
+
+            &__img{
+                height: 250px;
+
+            }
+            margin-bottom: 4rem;
         }
         &__title{
             font-size: 1rem;
